[gd_scene load_steps=10 format=2]

[ext_resource path="res://textures/Enemics/Wizzart_C.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Enemic.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/EstatsMag.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Mag.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.5, 10.5 )

[sub_resource type="Animation" id=5]
resource_name = "Atacar"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19, 20, 21, 22, 23, 24, 25, 26 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Caminar"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 9, 11 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 9 ]
}

[node name="Mag" instance=ExtResource( 2 )]
z_index = 1
script = ExtResource( 4 )

[node name="Estats" parent="." index="0"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="." index="1"]
texture = ExtResource( 1 )
offset = Vector2( 0, -15 )
hframes = 8
vframes = 4
frame = 9

[node name="AnimatedSprite" parent="." index="2"]
visible = false
z_index = 1

[node name="CollisionShape2D" parent="." index="3"]
position = Vector2( 0.5, -1.5 )
shape = SubResource( 2 )

[node name="Timer" parent="." index="4"]
wait_time = 0.2

[node name="TimerAtac" type="Timer" parent="." index="5"]
wait_time = 1.5
one_shot = true

[node name="AnimationPlayer" parent="." index="6"]
autoplay = "Idle"
anims/Atacar = SubResource( 5 )
anims/Caminar = SubResource( 6 )
anims/Idle = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="TimerCami" type="Timer" parent="." index="7"]

[node name="AnimAtacar" type="Timer" parent="." index="8"]

[connection signal="timeout" from="TimerAtac" to="." method="_on_TimerAtac_timeout"]
[connection signal="timeout" from="TimerCami" to="." method="_on_TimerCami_timeout"]
[connection signal="timeout" from="AnimAtacar" to="." method="_on_AnimAtacar_timeout"]
